style: Add flexbox layout to align game count and joined date in user details

--- a/ui/common/css/component/_power-tip.scss
+++ b/ui/common/css/component/_power-tip.scss
@@ -105,6 +105,8 @@
   &__details {
     @extend %flex-between;
 
+    display: flex;
+    justify-content: space-between;
     white-space: nowrap;
 
     &__marks {
