prevent header dropdown from being moved

--- a/ui/bits/css/_markdown-editor.scss
+++ b/ui/bits/css/_markdown-editor.scss
@@ -46,6 +46,9 @@
         margin: 0 0 -1px 0;
       }
     }
+    &-popup {
+      margin-left: 0;
+    }
     &-ww-container,
     &-md-container {
       border: 1px solid $c-border;
