tweak the title confirm UI

--- a/ui/bits/css/_titleRequest.scss
+++ b/ui/bits/css/_titleRequest.scss
@@ -49,12 +49,12 @@
   background: $c-bg-zebra;
   font-size: 1.2em;
 
-  &::before {
-    @extend %data-icon;
-
-    content: $licon-InfoCircle;
+  .icon-flair {
     @include margin-inline-end(2rem);
-    font-size: 3em;
+    max-height: 60px;
+  }
+  h2 {
+    margin-bottom: 1rem;
   }
 }
 
