--- a/ui/round/css/_layout.scss
+++ b/ui/round/css/_layout.scss
@@ -14,6 +14,9 @@
   grid-gap: $block-gap;
   @include mq-is-col1 {
     grid-gap: 0;
+    .game__meta__players {
+      display: none;
+    }
   }
 
   &__app {
