custom study flairs

--- a/ui/analyse/css/study/_list-widget.scss
+++ b/ui/analyse/css/study/_list-widget.scss
@@ -76,7 +76,7 @@
         flex: 0 0 auto;
         color: $m-primary_bg--mix-80;
         font-size: 3em;
-        .uflair {
+        img {
           margin: 0;
         }
       }
