--- a/ui/common/css/base/_util.scss
+++ b/ui/common/css/base/_util.scss
@@ -43,3 +43,11 @@ bad {
   width: 100%;
   height: min-content;
 }
+
+.icon-flair {
+  height: 1.1em;
+  vertical-align: middle;
+  margin-right: 0.5ch;
+  transform: translateY(-0.1em);
+  user-select: none;
+}
