--- a/ui/bits/css/_titleRequest.scss
+++ b/ui/bits/css/_titleRequest.scss
@@ -52,7 +52,7 @@
 
   .icon-flair {
     @include margin-inline-end(2rem);
-    max-height: 60px;
+    height: 60px;
   }
   h2 {
     margin-bottom: 1rem;
