improve study flair selector

--- a/ui/analyse/css/study/_modal.scss
+++ b/ui/analyse/css/study/_modal.scss
@@ -78,4 +78,15 @@
       margin-top: 0.2em;
     }
   }
+
+  &.study-edit .flair-and-name {
+    gap: 4%;
+    .form-group:last-child {
+      flex: 1 1 auto;
+    }
+    .uflair {
+      margin: 0;
+      font-size: 1.3em;
+    }
+  }
 }
