don't clip off "account has violated tos" marker

--- a/ui/common/css/component/_power-tip.scss
+++ b/ui/common/css/component/_power-tip.scss
@@ -25,7 +25,7 @@
 
     height: 83px;
     body.no-rating & {
-      height: 30px;
+      height: unset;
     }
     padding: 0.4em 0.5em 0.3em 0.5em;
     border-bottom: $border;
