--- a/ui/tree/css/_tree.scss
+++ b/ui/tree/css/_tree.scss
@@ -301,7 +301,7 @@
     margin-top: 2px;
     margin-inline-start: 6px;
     margin-bottom: 0.8em;
-    border-inline-start: 2px solid $c-border;
+    padding-inline-start: 2px;
   }
 
   > interrupt > lines {
@@ -319,10 +319,37 @@
   line {
     display: block;
     padding-inline-start: 7px;
+    position: relative;
   }
 
   &-column line {
     margin: 2px 0;
+  }
+
+  line > branch {
+    border-inline-start: 2px solid $c-border;
+    margin-inline-start: -9px;
+    position: absolute;
+    width: 8px;
+    height: 100%;
+  }
+
+  line:last-child > branch {
+    height: calc(0.8em + 2px);
+  }
+
+  line > branch::before {
+    margin-top: 0.8em;
+    content: ' ';
+    border-top: 2px solid $c-border;
+    position: absolute;
+    width: 7px;
+    height: 6px;
+  }
+
+  &-column line > branch {
+    margin-top: -2px;
+    height: calc(100% + 2px);
   }
 
   lines lines move {
@@ -331,25 +358,6 @@
 
   lines lines {
     margin-inline-start: 1px;
-  }
-
-  lines lines::before {
-    content: ' ';
-    border-top: 2px solid $c-border;
-    position: absolute;
-    margin-inline-start: -11px;
-    width: 9px;
-    height: 6px;
-  }
-
-  lines line::before {
-    margin-top: 0.65em;
-    margin-inline-start: -8px;
-    content: ' ';
-    border-top: 2px solid $c-border;
-    position: absolute;
-    width: 8px;
-    height: 6px;
   }
 
   lines lines:last-child {
