--- a/ui/tree/css/_tree.scss
+++ b/ui/tree/css/_tree.scss
@@ -334,7 +334,8 @@
     height: 100%;
   }
 
-  line:last-child > branch {
+  line:last-child > branch,
+  line.expand > branch {
     height: calc(0.8em + 2px);
   }
 
@@ -362,6 +363,18 @@
 
   lines lines:last-child {
     margin-bottom: 0;
+  }
+
+  lines.collapsed > * {
+    display: none;
+  }
+
+  lines.collapsed > line.expand {
+    display: block;
+  }
+
+  line.expand > a {
+    color: var(--c-font-dim);
   }
 
   inline {
