link fide ids in broadcast tags

--- a/ui/analyse/css/study/panel/_metadata.scss
+++ b/ui/analyse/css/study/panel/_metadata.scss
@@ -55,7 +55,8 @@
   }
 
   input,
-  span {
+  span,
+  a {
     display: block;
     @include padding-direction(0.6em, 1em, 0.6em, 0.7em);
     line-height: 1.7;
