Add hover styling for expand variations button

--- a/ui/tree/css/_tree.scss
+++ b/ui/tree/css/_tree.scss
@@ -377,6 +377,10 @@
     color: var(--c-font-dim);
   }
 
+  line.expand > a:hover {
+    color: var(--c-font);
+  }
+
   inline {
     display: inline;
     font-style: italic;
