--- a/ui/bits/css/coach/_editor.scss
+++ b/ui/bits/css/coach/_editor.scss
@@ -107,7 +107,7 @@
 
   .status {
     opacity: 0;
-    @include transition();
+    @include transition;
     text-align: center;
     color: $c-good;
   }
