monospace in technical broadcast form textareas

--- a/ui/bits/css/relay/_form.scss
+++ b/ui/bits/css/relay/_form.scss
@@ -28,6 +28,13 @@
     margin-bottom: 2em;
   }
 }
+
+#form3-grouping,
+#form3-players,
+#form3-teams {
+  font-family: monospace;
+}
+
 .relay-image {
   max-width: 100%;
   height: auto;
