--- a/ui/local/css/_cards.scss
+++ b/ui/local/css/_cards.scss
@@ -8,10 +8,13 @@
   .card {
     position: absolute;
     top: 0;
+    left: 0;
     border-radius: 6px;
     background-color: #f0f0f0;
     border: 1px solid $c-border;
-    transition: transform 0.3s;
+    transition:
+      transform 0.3s,
+      opacity 0.3s;
     img {
       width: calc(192px * var(---scale-factor));
     }
