--- a/ui/common/css/header/_header.scss
+++ b/ui/common/css/header/_header.scss
@@ -8,7 +8,7 @@ body > header {
   display: flex;
   justify-content: space-between;
   position: relative;
-  z-index: z('site-header');
+  z-index: $z-site-header-106;
   max-width: 1800px;
   margin: 0 auto;
   user-select: none;
