--- a/ui/mod/css/_user.scss
+++ b/ui/mod/css/_user.scss
@@ -136,7 +136,7 @@
     position: fixed;
     bottom: 0;
     background: $c-brag;
-    z-index: z('mz-menu');
+    z-index: $z-mz-menu-4;
 
     // border-top: 1px solid $c-brag;
     // border-width: 3px 2px 0 2px;
