--- a/ui/common/css/abstract/_z-index.scss
+++ b/ui/common/css/abstract/_z-index.scss
@@ -1,48 +1,34 @@
-/// Z-indexes map, gathering all Z layers of the application
-/// @access private
-/// @type Map
-/// @prop {String} key - Layer’s name
-/// @prop {Number} value - Z value mapped to the key
-$z-indexes: (
-  'cg__promotion': 205,
-  'cg__piece.dragging': 204,
-  'cg__board.overlay': 100,
-  'cg__piece.anim': 3,
-  'cg__svg.cg-shapes': 2,
-  'cg__svg.cg-custom-svgs': 4,
-  'cg__cg-auto-pieces': 2,
-  'cg__piece': 2,
-  'cg__piece.fading': 1,
-  'powertip': 120,
-  'complete': 113,
-  'inquiry': 112,
-  'zen-toggle': 111,
-  'modal': 111,
-  'mselect': 111,
-  'topnav': 111,
-  'fullscreen-mask': 110,
-  'dropdown': 109,
-  'context-menu': 108,
-  'above-site-header': 107,
-  'site-header': 106,
-  'network-status': 105,
-  'tour-reminder': 104,
-  'video-player-controls': 101,
-  'video-player': 100,
-  'mz-menu': 4,
-  'above-link-overlay': 3,
-  'friend-box': 2,
-  'link-overlay': 2,
-  'game-bookmark': 2,
-  'subnav-side': 2,
-  'default': 0,
-);
+/// Z-indexes, gathering all Z layers of the application
 
-/// Get a z-index value from a layer name
-/// @access public
-/// @param {String} $layer - Layer’s name
-/// @return {Number}
-/// @require $z-indexes
-@function z($layer) {
-  @return map-get($z-indexes, $layer);
-}
+$z-cg__promotion-205: 205;
+$z-cg__piece_dragging-204: 204;
+$z-cg__board_overlay-100: 100;
+$z-cg__piece_anim-3: 3;
+$z-cg__svg_cg-shapes-2: 2;
+$z-cg__svg_cg-custom-svgs-4: 4;
+$z-cg__cg-auto-pieces-2: 2;
+$z-cg__piece-2: 2;
+$z-cg__piece_fading-1: 1;
+$z-powertip-120: 120;
+$z-complete-113: 113;
+$z-inquiry-112: 112;
+$z-zen-toggle-111: 111;
+$z-modal-111: 111;
+$z-mselect-111: 111;
+$z-topnav-111: 111;
+$z-fullscreen-mask-110: 110;
+$z-dropdown-109: 109;
+$z-context-menu-108: 108;
+$z-above-site-header-107: 107;
+$z-site-header-106: 106;
+$z-network-status-105: 105;
+$z-tour-reminder-104: 104;
+$z-video-player-controls-101: 101;
+$z-video-player-100: 100;
+$z-mz-menu-4: 4;
+$z-above-link-overlay-3: 3;
+$z-friend-box-2: 2;
+$z-link-overlay-2: 2;
+$z-game-bookmark-2: 2;
+$z-subnav-side-2: 2;
+$z-default-0: 0;
