--- a/ui/common/css/component/_subnav.scss
+++ b/ui/common/css/component/_subnav.scss
@@ -56,7 +56,7 @@
 
   @include mq-subnav-side {
     margin-top: 5px;
-    z-index: z('subnav-side');
+    z-index: $z-subnav-side-2;
 
     /* active border must go over the page content */
     a {
