--- a/ui/common/css/header/_buttons.scss
+++ b/ui/common/css/header/_buttons.scss
@@ -55,7 +55,7 @@
     @include inline-end(0);
     top: $site-header-height;
     background: $c-bg-header-dropdown;
-    z-index: z('dropdown');
+    z-index: $z-dropdown-109;
 
     a,
     button {
