thinner profile header (back to before profile menu)
close https://github.com/lichess-org/lila/issues/15512

--- a/ui/bits/css/user/_show.scss
+++ b/ui/bits/css/user/_show.scss
@@ -34,7 +34,7 @@
 
     .user-actions {
       flex: 0 0 auto;
-      margin: 1em 1em 1em 0.3em;
+      margin: 0 1em 0 0.3em;
 
       form {
         display: inline;
