Profile, fix dropdown button covering others when screen too narrow

--- a/ui/bits/css/user/_show.scss
+++ b/ui/bits/css/user/_show.scss
@@ -28,7 +28,7 @@
 
     .number-menu {
       flex: 0 1 auto;
-      overflow: hidden;
+      overflow-x: auto;
       margin: 0 0 0.2em 1em;
     }
 
