--- a/ui/bits/css/relay/_form.scss
+++ b/ui/bits/css/relay/_form.scss
@@ -54,3 +54,29 @@
     @extend %flex-between;
   }
 }
+
+@include mq-subnav-side {
+  .relay-form__subnav__group {
+    display: block;
+    margin-bottom: 1em;
+    font-weight: bold;
+    color: $c-font-dimmer;
+  }
+  .relay-form__subnav__tour-parent {
+    background: $c-bg-box;
+    border-radius: $box-radius-size 0 0 $box-radius-size;
+  }
+  .subnav {
+    width: 30ch;
+    a {
+      white-space: wrap;
+    }
+    .subnav__subitem {
+      margin-left: 1em;
+    }
+    .subnav__subitem2 {
+      margin-left: 2em;
+      letter-spacing: 0px;
+    }
+  }
+}
