lobby pool buttons without borders

--- a/ui/common/css/theme/_default.scss
+++ b/ui/common/css/theme/_default.scss
@@ -122,4 +122,5 @@ $c-clearer: #fff;
   --c-good-move: #{$c-good-move};
   --c-brilliant: #{$c-brilliant};
   --c-interesting: #{$c-interesting};
+  --c-pool-button: #{hsla($site-hue, 7%, 19%, 66%)};
 }
