--- a/ui/lobby/css/app/_pool.scss
+++ b/ui/lobby/css/app/_pool.scss
@@ -5,7 +5,9 @@
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(4, 1fr);
   grid-gap: 9px;
-  padding: 9px;
+  padding-top: 9px;
+  background-color: transparent !important;
+  box-shadow: none;
 
   @include fluid-size('font-size', 14px, 25px);
 
@@ -15,18 +17,18 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    border: $border;
 
-    background: $m-font--fade-95;
+    background: $c-pool-button;
     @include if-light {
       background: $m-bg--fade-50;
     }
 
-    color: $c-font;
+    color: $c-font-dim;
 
     @include transition;
 
     &:hover {
+      color: $c-font;
       background: $m-accent--fade-80 !important;
       opacity: 1;
     }
