fix puzzle good move color

--- a/ui/common/css/theme/_light.scss
+++ b/ui/common/css/theme/_light.scss
@@ -24,7 +24,7 @@ $c-shade: hsl(0, 0%, 84%);
 $c-inaccuracy: hsl(202, 78%, 40%);
 $c-mistake: hsl(41, 100%, 35%);
 $c-blunder: hsl(0, 68%, 50%);
-$c-good-move: hsl(130, 67%, 40%);
+$c-good: $c-secondary;
 $c-brilliant: hsl(129, 71%, 30%);
 $c-interesting: hsl(307, 80%, 59%);
 $c-dimmer: #fff;
