--- a/ui/common/css/component/_lichess-pgn-viewer.scss
+++ b/ui/common/css/component/_lichess-pgn-viewer.scss
@@ -27,7 +27,7 @@
   --c-lpv-bg-inaccuracy-hover: #{$m-inaccuracy_bg--mix-30};
   --c-lpv-bg-mistake-hover: #{$m-mistake_bg--mix-30};
   --c-lpv-bg-blunder-hover: #{$m-blunder_bg--mix-30};
-  --c-lpv-bg-good-hover: #{$m-good-move_bg--mix-30};
+  --c-lpv-bg-good-hover: #{$m-good_bg--mix-30};
   --c-lpv-bg-brilliant-hover: #{$m-brilliant_bg--mix-30};
   --c-lpv-bg-interesting-hover: #{$m-interesting_bg--mix-30};
 
