show puzzle glyphs over the board - closes #15379

--- a/ui/tree/css/_tree.scss
+++ b/ui/tree/css/_tree.scss
@@ -38,18 +38,21 @@
     }
     &.good {
       color: $c-good;
+      font-weight: bold;
       &:hover {
         background: $m-good_bg--mix-30;
       }
     }
     &.brilliant {
       color: $c-brilliant;
+      font-weight: bold;
       &:hover {
         background: $m-brilliant_bg--mix-30;
       }
     }
     &.interesting {
       color: $c-interesting;
+      font-weight: bold;
       &:hover {
         background: $m-interesting_bg--mix-30;
       }
