fix user actions in blind mode - after #15260 - closes #15545

--- a/ui/bits/css/user/_show.scss
+++ b/ui/bits/css/user/_show.scss
@@ -62,6 +62,9 @@
         position: absolute;
         top: 3rem;
         @include inline-end(0);
+        body.blind-mode & {
+          visibility: visible;
+        }
         a {
           @extend %flex-center-nowrap;
           width: 20em;
