--- a/ui/bits/css/relay/_form.scss
+++ b/ui/bits/css/relay/_form.scss
@@ -55,6 +55,16 @@
   }
 }
 
+.relay-form__sync-lcc {
+  .form-half:first-child {
+    flex: 0 1 76%;
+  }
+  .form-half:last-child {
+    flex: 0 1 20%;
+    min-width: 3ch;
+  }
+}
+
 @include mq-subnav-side {
   .relay-form__subnav__group {
     display: block;
