better form-fieldset that also serves as <details>
we can't use <details> because it has its own rendering rules
which don't play well with flex
so we implement our own <details> :shrug:

--- a/ui/common/css/form/_form3.scss
+++ b/ui/common/css/form/_form3.scss
@@ -144,3 +144,27 @@ textarea.form-control {
     font-size: 1.2em;
   }
 }
+.form-fieldset--toggle {
+  legend {
+    cursor: pointer;
+    &::after {
+      content: '▲';
+      margin-left: 1ch;
+    }
+  }
+}
+.form-fieldset--toggle-off {
+  border-width: 1px 0 0 0;
+  legend {
+    &:hover {
+      color: $c-brag;
+    }
+    &::after {
+      color: $c-brag;
+      content: '▼';
+    }
+  }
+  > *:not(legend) {
+    display: none;
+  }
+}
