--- a/ui/common/css/base/_typography.scss
+++ b/ui/common/css/base/_typography.scss
@@ -33,6 +33,10 @@ h2 {
   @include fluid-size('font-size', 16px, 30px);
 }
 
+.monospace {
+  font-family: monospace;
+}
+
 .ninja-title {
   @extend %base-font;
 
