--- a/ui/challenge/css/_page.scss
+++ b/ui/challenge/css/_page.scss
@@ -4,7 +4,7 @@
     gap: $block-gap;
     grid-template-columns: repeat(auto-fill, minmax(25em, 1fr));
 
-    > div {
+    >div {
       @extend %box-neat;
       padding: $block-gap;
       background: $c-bg-zebra;
@@ -56,6 +56,7 @@
     .correspondence-waiting {
       font-size: 1.5em;
       margin: 2em auto;
+
       &::before {
         color: $c-good;
       }
@@ -67,8 +68,8 @@
     text-align: center;
   }
 
-  .details {
-    @extend %flex-between, %box-neat;
+  .details-wrapper {
+    @extend %box-neat;
 
     ---font: #{$c-secondary};
     ---bg: #{$m-secondary_bg--mix-10};
@@ -84,34 +85,62 @@
     background: var(---bg);
     border: 1px solid var(---font);
 
-    > div {
-      flex: 0 1 auto;
-      @extend %flex-center, %roboto;
+    .content {
+      @extend %flex-between;
 
-      &::before {
-        color: var(---font);
-        font-size: 6rem;
-        margin-inline-end: 0.2em;
+      >div {
+        flex: 0 1 auto;
+        @extend %flex-center, %roboto;
 
-        @media (max-width: at-most($xx-small)) {
-          display: none;
+        &::before {
+          color: var(---font);
+          font-size: 6rem;
+          margin-inline-end: 0.2em;
+
+          @media (max-width: at-most($xx-small)) {
+            display: none;
+          }
+        }
+
+        div {
+          line-height: 1.4;
+        }
+
+        .clock {
+          font-weight: bold;
         }
       }
 
-      div {
-        line-height: 1.4;
-      }
-
-      .clock {
+      .mode {
+        text-align: end;
         font-weight: bold;
+        font-size: 0.8em;
+        color: var(---font);
       }
     }
 
-    .mode {
-      text-align: end;
-      font-weight: bold;
-      font-size: 0.8em;
-      color: var(---font);
+    .rules {
+      margin-top: 1.5rem;
+
+      >div {
+        @extend %flex-center;
+        margin-top: 1rem;
+
+        .challenge-rule {
+          @extend %flex-center;
+          margin-bottom: 0.75rem;
+
+          .text {
+            font-size: 0.575em;
+          }
+
+          .separator {
+            padding: 0 0.5rem 0 0.5rem;
+            font-weight: bold;
+            font-size: 0.625em;
+          }
+        }
+      }
     }
   }
 
