challenge rules: tweak icons

--- a/ui/challenge/css/_page.scss
+++ b/ui/challenge/css/_page.scss
@@ -132,7 +132,8 @@
           @extend %flex-center;
 
           .icon-flair {
-            height: 1em;
+            height: 1.5em;
+            margin: 0.2em 0.8em 0 0;
           }
         }
       }
