--- a/ui/analyse/css/study/relay/_tour.scss
+++ b/ui/analyse/css/study/relay/_tour.scss
@@ -290,6 +290,15 @@ $hover-bg: $m-primary_bg--mix-30;
     @include rendered-markdown(2em, 50vh);
     margin: 3em var(---box-padding);
   }
+  &__share {
+    @extend %box-neat;
+    background: $c-bg-zebra;
+    margin: 3em var(---box-padding);
+    padding: 3em var(---box-padding) 1em var(---box-padding);
+    h2 {
+      margin-bottom: 3rem;
+    }
+  }
 
   &__leaderboard {
     width: auto;
